Switch demo payload to stock vproxy (-Deploy=helloworld) with UI polish
The demo now embeds the unmodified vproxy jar instead of the hand-written
TinyHttpServer, and the app UI was reworked around it. Simulator-verified
end to end (run-sim-demo.sh green: HTTP 200 "vproxy 1.0.0-BETA-13-DEV",
TCP/UDP self-checks pass, resolver reads the container resolv.conf).

Payload & launch:
- Java/TinyHttpServer.java is replaced by Java/IosBootstrap.java: a tiny
  helper jar appended after vproxy.jar on java.class.path that registers
  nativeLog and redirects System.out/err line by line (raw, ANSI kept)
  to the app console. vproxy itself is completely unmodified.
- jvm_bridge: classpath = vproxy.jar + bootstrap jar, Main-Class
  io.vproxy.app.app.Main with the program argument -Deploy=helloworld
  (same as the documented `java -jar vproxy.jar -Deploy=helloworld`);
  -Duser.home=<app container> keeps all vproxy state inside the sandbox;
  --add-exports=java.base/jdk.internal.misc per vproxy's own startup
  suggestion.
- Before the JVM starts, the system DNS servers are collected
  (/etc/resolv.conf nameserver lines; libresolv res_9_* via dlopen as
  the device fallback) and written to <container>/.vproxy/resolv.conf,
  which vproxy's resolver prefers over /etc/resolv.conf. Any failure
  reports full detail and blocks the start.
- Port input removed everywhere (helloworld listens on 8080). build-java.sh
  packages the stock jar; vproxy is built from github.com/wkgcass/vproxy
  via `git submodule update --init --recursive && ./gradlew shadowjar`
  (skip the build when build/libs/vproxy.jar already exists - the script
  then only copies it). Sibling-checkout default plus VPROXY_JAR
  override; no absolute local paths.

UI:
- TinyHttpServerApp now uses JvmModel.shared (the native callbacks'
  target): the previous separate instance left the UI console without
  any JVM output.
- Console lines render as styled segments parsed from ANSI SGR, so only
  the parts vproxy actually colors (